spade-tests/src/snapshots/spade_tests__hir_lowering__tests__refutable_array_patterns_are_detected.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn test() {
    let [true, x] = [true, true];
}


error: Refutable pattern in local binding: patterns [false, false], [false, true] not covered
  ┌─ testinput:2:9
  │
2 │     let [true, x] = [true, true];
  │         ^^^^^^^^^ pattern patterns [false, false], [false, true] not covered
  │
  = note: let requires a pattern which matches all possible options, such as a variable, struct or enum with only 1 option.
  = help: you might want to use match statement to handle different cases
